<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:padding="@dimen/_10sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            app:tint="@color/app_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <RadioButton
            android:id="@+id/rb_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/custom_radio_button_selector"
            android:checked="true"
            android:textColor="@color/white"
            android:text="@string/sort_distance_in_ascending_order"/>

        <RadioButton
            android:id="@+id/rb_des"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/custom_radio_button_selector"
            android:layout_height="wrap_content"
            android:text="@string/sort_distance_in_descending_order"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/clear"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:textColor="#ffffff"
            android:background="@drawable/primary_button"
            android:text="@string/apply"/>


    </LinearLayout>


</LinearLayout>