<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_170sdp"
        android:layout_margin="@dimen/_30sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDeleteSavedPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:includeFontPadding="false"
                android:text="@string/delete_saved_place"
                android:textColor="@color/app_color"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDeleteDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/are_you_sure_you_want_to_delete_this_place_details_from_your_saved_list"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDeleteSavedPlace" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_button_custom"
                android:paddingVertical="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/buttonNo"
                app:layout_constraintStart_toStartOf="@+id/textViewDeleteDescription"
                app:layout_constraintTop_toBottomOf="@+id/textViewDeleteDescription" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_button_custom"
                android:paddingVertical="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/app_color"
                app:layout_constraintEnd_toEndOf="@+id/textViewDeleteDescription"
                app:layout_constraintStart_toEndOf="@id/buttonYes"
                app:layout_constraintTop_toBottomOf="@+id/textViewDeleteDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
